--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -105,7 +105,6 @@
   }
 }
 
-/* бургер прихований за замовчуванням (десктоп) */
 .burgerBtn {
   display: none;
   margin-left: 16px;
@@ -136,8 +135,6 @@
 .active::after {
   width: 100%;
 }
-
-/* full-screen burger */
 
 .burgerOverlay {
   position: fixed;
@@ -232,7 +229,6 @@
   }
 }
 
-/* ≤700px: показати бургер, сховати нав, залишити кнопки в лінію + бургер справа */
 
 @media (max-width: 700px) {
   .nav {
@@ -246,5 +242,21 @@
 
   .burgerBtn {
     display: flex;
+  }
+}
+
+
+@media (hover: none) {
+  .navListElement a::after,
+  .burgerNavItem a::after {
+    display: none;
+  }
+
+  .loginBtn:hover,
+  .regBtn:hover,
+  .burgerBtn:hover,
+  .burgerCloseBtn:hover {
+    transform: none;
+    background-color: initial;
   }
 }
