--- a/src/pages/LocationFormPage/LocationForm.module.scss
+++ b/src/pages/LocationFormPage/LocationForm.module.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     width: 375px;
     margin: auto;
-    border: 1px solid red;
     padding-bottom: 40px;
 }
 
@@ -97,7 +96,8 @@
     font-family: "Montserrat";
     font-weight: 500;
     border: 1px solid  #00000026;
-    color:"#4C2613";
+    color:#4C2613;
+    border-radius: 8px;
 }
 .imageLocation {
     width:335px;
@@ -105,33 +105,70 @@
 .btnLocation:hover {
     border: 1px solid #FFE5D9;
 }
+.mapLocation {
+    width:335px;
+    height:188px;
+}
+.wrapperLocation {
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    align-items: center;
+}
 @media(min-width:768px) {
 .containerNewLocation {
     width:768px;
 }
-.photoInput {
+.photoInputLarge {
     width:704px;
+    height:468px;
+    background-image: url("../../../public/assets/placeholderImageTablet.png");
+}
+
+.wrapperLocation {
+    flex-direction: row;
+}
+.btnSearch {
+    width:199px;
 }
 .inputLocation {
     width:704px;
+    &.search {
+        width:421px;
+    }
 }
 .inputLocationArea {
     width:704px;
 }
-.inputLocation:nth-last-child{
-    width:421px;
-}
+
 .wrapperButton {
     flex-direction: row;
 }
 .btnLocation {
     width:203px;
 }
-
+.mapLocation {
+    width:704px;
+    height:395px;
+}
 }
 @media(min-width:1440px){
+    .containerNewLocation {
+        width:1240px;
+    }
+    .photoInputLarge {
+        background-image: url("../../../public/assets/placeholderImageDesktop.png");
+        width:1091px;
+        height: 726px;
+    }
     .inputLocation {
-        width:1075px;
-        height:27px;
+        width: 1091px;
+        height: 43px;
+    }
+    .inputLocationArea {
+        width:1091px;
+    }
+    .btnDownload {
+        width:215px;
     }
 }
