--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -1,4 +1,3 @@
-// Footer.scss
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 .footer {
@@ -80,7 +79,7 @@
       }
 
        @media (max-width: 768px) {
-          flex-direction: column; /* Optional: stack links on mobile if needed, or keep row */
+          flex-direction: column;
           gap: 15px;
           align-items: center;
       }
