start work(don't merge)

--- a/src/pages/LocationFormPage/LocationForm.module.scss
+++ b/src/pages/LocationFormPage/LocationForm.module.scss
@@ -68,6 +68,7 @@
     border-radius: 8px;
     padding-top:10px;
     padding-left: 10px;
+    resize: vertical;
     &::placeholder {
         font-family: "Montserrat";
         font-weight: 400;
