--- a/src/pages/LocationFormPage/LocationForm.module.scss
+++ b/src/pages/LocationFormPage/LocationForm.module.scss
@@ -116,6 +116,33 @@
     gap:20px;
     align-items: center;
 }
+.inputLocationSelect {
+    appearance: none;
+    background-image: url("../../../public/assets/arrowDown.svg");
+    background-repeat: no-repeat;
+    background-position: right 12px center; 
+}
+.suggestionsList {
+  width:100%;
+  border-radius: 10px;
+  border:1px solid #CC6534;
+  overflow-y: auto;
+  padding: 0;
+}
+.suggestionsItemList {
+    display: flex;
+    gap:20px;
+    list-style: none;
+    align-items: center;
+    cursor:pointer;
+    transition: background 0.2 ease;
+    &:hover {
+        background-color: #CC6534;
+    }
+    &:active {
+        background-color: #4C2613;
+    }
+}
 @media(min-width:768px) {
 .containerNewLocation {
     width:768px;
