--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,9 +1,8 @@
 .container {
-  border: 2px solid coral;
   max-width: 1200px;
   margin: 0 auto;
-
-  // align-self: center;
+  padding: 0 16px;
+  border: 2px solid coral;
 }
 
 .headerCont {
