--- a/src/pages/HomePage/PopularLocationsBlock.module.scss
+++ b/src/pages/HomePage/PopularLocationsBlock.module.scss
@@ -5,6 +5,14 @@
     font-family: "Montserrat", sans-serif;
     background-color: #faf6f3;
 
+    @media (max-width: 1024px) {
+        padding: 60px 40px;
+    }
+
+    @media (max-width: 768px) {
+        padding: 40px 20px;
+    }
+
     &__header {
         display: flex;
         justify-content: space-between;
