--- a/src/pages/HomePage/ReviewsBlock.module.scss
+++ b/src/pages/HomePage/ReviewsBlock.module.scss
@@ -75,7 +75,7 @@
         svg {
             width: 16px;
             height: 16px;
-            fill: currentColor;
+            //fill: currentColor;
         }
     }
 
