--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,21 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 ul,
 ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .standart-btn {
   width: 335px;
@@ -37,6 +49,10 @@ ol {
     background-color: #dfdfdf;
     color: #4c2613;
   } */
+}
+
+button {
+  cursor: pointer;
 }
 
 .standart-btn:hover {
