--- a/src/pages/LocationDeteilsPage/ReviewsSection.module.scss
+++ b/src/pages/LocationDeteilsPage/ReviewsSection.module.scss
@@ -2,6 +2,8 @@
   padding: 72px 0;
 
   &__empty {
+    margin: 0 auto;
+    width: 600px;
     background-color: #ffece5;
     border-radius: 16px;
     padding: 50px 30px;
