--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -171,11 +171,13 @@
   }
 }
 
-/* ================== FOOTER ================== */
-
 .copyright {
   width: 100%;
   text-align: center;
   position: absolute;
   bottom: 10px;
+}
+
+.loginForm{
+  margin-top: 50px;
 }
