--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -1,6 +1,8 @@
 // Header.module.scss
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+$btn-rotate: -3deg;
+
 * {
   font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -17,15 +19,24 @@
   position: fixed;
   z-index: 9999;
   top: 0;
+
+  @media (max-width: 400px) {
+    .regBtn, .loginBtn{
+      display: none;
+    }
+  }
 }
 
 .logoDiv {
   display: flex;
   align-items: center;
+  // width: 100%;
 
   .logoText {
     margin-left: 8px;
-    font-weight: 600;
+    font-weight: 400;
+      white-space: nowrap;
+
   }
 }
 
@@ -88,7 +99,7 @@
   font: inherit;
 
   &:hover {
-    transform: rotate(9deg) scale(1.3);
+    transform: rotate($btn-rotate) scale(1.3);
   }
 }
 
@@ -103,7 +114,7 @@
   font: inherit;
 
   &:hover {
-    transform: rotate(9deg) scale(1.3);
+    transform: rotate($btn-rotate) scale(1.3);
     background-color: #b6623c;
   }
 }
