location grid hotfix

--- a/src/pages/LocationsPage/LocationCard/LocationCard.module.scss
+++ b/src/pages/LocationsPage/LocationCard/LocationCard.module.scss
@@ -1,43 +1,49 @@
-.wrapperCard{
-    width:421px;
-    height:624px;
-    background-color: #FFE5D9;
-    list-style: none;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.wrapperCard {
+  width: 100%;
+  max-width: 360px;
+  background-color: #ffe5d9;
+  list-style: none;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
+
 .cardImage {
-    width:421px;
-    height: 421px;
-    border-radius: 10px;
+  width: 100%;
+  max-width: 421px;
+  height: 280px;
+  border-radius: 10px;
+  object-fit: cover;
 }
+
 .textPlace {
-    font-weight: 600;
-    font-family: "Montserrat";
+  font-weight: 600;
+  font-family: "Montserrat";
 }
 .btnLocation {
-    width:389px;
-    height:48px;
-    border-radius:8px;
-    margin: 0 auto;
-    color:#4C2613;
-    font-weight: 500;
-    font-family: "Montserrat";
-    background-color: #FFE5D9;
-    
+  width: 100%;
+  max-width: 320px;
+  height: 48px;
+  border-radius: 8px;
+  margin: 0 auto;
+  color: #4c2613;
+  font-weight: 500;
+  font-family: "Montserrat";
+  background-color: #ffe5d9;
 }
-.wrapperInfoCard{
-    margin-left:20px;
-    display: flex;
-    flex-direction: column;
-    gap:20px;
+
+.wrapperInfoCard {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
+
 .textNameLocation {
-    color:#4C2613;
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-style: bold;
+  color: #4c2613;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-style: bold;
 }
