--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -21,6 +21,7 @@ $btn-rotate: -3deg;
   position: fixed;
   z-index: 2;
   top: 0;
+  padding: 10px;
 
   @media (max-width: 400px) {
     .regBtn, .loginBtn{
