--- a/src/pages/LocationsPage/FilterPanel/FilterPanel.module.scss
+++ b/src/pages/LocationsPage/FilterPanel/FilterPanel.module.scss
@@ -24,6 +24,7 @@
     background-repeat: no-repeat;
     background-position: right 12px center;
     padding-left: 12px;
+    font-size: 12px;
 }
 
 .formFilterLocation {
