--- a/src/pages/LocationFormPage/LocationForm.module.scss
+++ b/src/pages/LocationFormPage/LocationForm.module.scss
@@ -14,13 +14,14 @@
     font-family: "Montserrat";
     font-style: bold;
     color: #1B391B;
-    margin-left: 20px;
+    font-size: 48px;
 }
 
 .containerFormLocation {
     display: flex;
     flex-direction: column;
     gap:15px;
+    margin-left: 40px;
 }
 
 .photoInput {
