--- a/src/pages/LocationFormPage/LocationForm.module.scss
+++ b/src/pages/LocationFormPage/LocationForm.module.scss
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 375px;
-    margin: auto;
+    width: 100%;
+    max-width: 375px;
+    margin: 0 auto;
     padding-bottom: 40px;
     margin-top: 50px;
 }
@@ -20,16 +21,21 @@
 .containerFormLocation {
     display: flex;
     flex-direction: column;
-    gap:15px;
-    margin-left: 40px;
+    gap: 15px;
+    /* убираем фиксированный отступ слева на мобилке */
+    margin-left: 0;
+    width: 100%;
+    max-width: 335px;
 }
 
 .photoInput {
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 223px;
     background-image: url("../../../public/assets/placeholderImage.png");
     background-repeat: no-repeat;
-    resize:none;
+    background-size: cover;
+    resize: none;
 }
 
 .btnDownload {
@@ -49,165 +55,212 @@
 }
 
 .inputLocation {
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 40px;
     background-color: #FFE5D9;
     border: 1px solid #00000026;
     border-radius: 8px;
     padding-left: 10px;
+}
 
-    &::placeholder {
-        font-family: "Montserrat";
-        font-weight: 400;
-    }
+.inputLocation::placeholder {
+    font-family: "Montserrat";
+    font-weight: 400;
 }
 
 .inputLocationArea {
     background-color: #FFE5D9;
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 180px;
     border: 1px solid #00000026;
     border-radius: 8px;
-    padding-top:10px;
+    padding-top: 10px;
     padding-left: 10px;
     resize: vertical;
-    &::placeholder {
-        font-family: "Montserrat";
-        font-weight: 400;
-    }
+}
+
+.inputLocationArea::placeholder {
+    font-family: "Montserrat";
+    font-weight: 400;
 }
 
 .btnLocation {
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 48px;
     border: 1px solid #00000026;
     border-radius: 8px;
-
-    &--post {
-        background: #CC6534;
-    }
 }
+
+.btnLocation--post {
+    background: #CC6534;
+}
+
 .wrapperButton {
-    margin-top:30px;
-    gap:20px;
-    display:flex;
+    margin-top: 30px;
+    gap: 20px;
+    display: flex;
     flex-direction: column;
 }
+
 .btnSearch {
-    width:335px;
-    height:48px;
+    width: 100%;
+    max-width: 335px;
+    height: 48px;
     font-family: "Montserrat";
     font-weight: 500;
-    border: 1px solid  #00000026;
-    color:#4C2613;
+    border: 1px solid #00000026;
+    color: #4C2613;
     border-radius: 8px;
 }
+
 .imageLocation {
-    width:335px;
+    width: 100%;
+    max-width: 335px;
     height: 223px;
 }
+
 .btnLocation:hover {
     border: 1px solid #FFE5D9;
 }
+
 .mapLocation {
-    width:335px;
-    height:188px;
+    width: 100%;
+    max-width: 335px;
+    height: 188px;
 }
+
 .wrapperLocation {
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
     align-items: center;
+    width: 100%;
 }
+
 .inputLocationSelect {
     appearance: none;
     background-image: url("../../../public/assets/arrowDown.svg");
     background-repeat: no-repeat;
-    background-position: right 12px center; 
+    background-position: right 12px center;
 }
+
 .suggestionsList {
-  width:100%;
-  border-radius: 10px;
-  border:1px solid #CC6534;
-  overflow-y: auto;
-  padding: 0;
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #CC6534;
+    overflow-y: auto;
+    padding: 0;
 }
+
 .suggestionsItemList {
     display: flex;
-    gap:20px;
+    gap: 20px;
     list-style: none;
     align-items: center;
-    cursor:pointer;
-    transition: background 0.2 ease;
-    &:hover {
-        background-color: #CC6534;
-    }
-    &:active {
-        background-color: #4C2613;
-    }
-}
-@media(min-width:768px) {
-.containerNewLocation {
-    width:768px;
-}
-.photoInputLarge {
-    width:704px;
-    height:468px;
-    background-image: url("../../../public/assets/placeholderImageTablet.png");
+    cursor: pointer;
+    transition: background 0.2s ease;
 }
 
-.wrapperLocation {
-    flex-direction: row;
-}
-.btnSearch {
-    width:199px;
-}
-.inputLocation {
-    width:704px;
-    &.search {
-        width:421px;
-    }
-}
-.inputLocationArea {
-    width:704px;
+.suggestionsItemList:hover {
+    background-color: #CC6534;
 }
 
-.wrapperButton {
-    flex-direction: row;
+.suggestionsItemList:active {
+    background-color: #4C2613;
 }
-.btnLocation {
-    width:203px;
-}
-.mapLocation {
-    width:704px;
-    height:395px;
-}
-.imageLocation{
-    width:704px;
-    height:468px;
-}
-}
-@media(min-width:1440px){
+
+/* tablet */
+@media (min-width: 768px) {
     .containerNewLocation {
-        width:1240px;
+        width: 768px;
+        max-width: 100%;
     }
+
+    .photoInputLarge {
+        width: 704px;
+        height: 468px;
+        background-image: url("../../../public/assets/placeholderImageTablet.png");
+    }
+
+    .wrapperLocation {
+        flex-direction: row;
+    }
+
+    .btnSearch {
+        width: 199px;
+        max-width: none;
+    }
+
+    .inputLocation {
+        width: 704px;
+        max-width: none;
+    }
+
+    .inputLocation.search {
+        width: 421px;
+    }
+
+    .inputLocationArea {
+        width: 704px;
+        max-width: none;
+    }
+
+    .wrapperButton {
+        flex-direction: row;
+    }
+
+    .btnLocation {
+        width: 203px;
+        max-width: none;
+    }
+
+    .mapLocation {
+        width: 704px;
+        height: 395px;
+        max-width: none;
+    }
+
+    .imageLocation {
+        width: 704px;
+        height: 468px;
+        max-width: none;
+    }
+}
+
+/* desktop */
+@media (min-width: 1440px) {
+    .containerNewLocation {
+        width: 1240px;
+        max-width: 100%;
+    }
+
     .photoInputLarge {
         background-image: url("../../../public/assets/placeholderImageDesktop.png");
-        width:1091px;
+        width: 1091px;
         height: 726px;
     }
+
     .inputLocation {
         width: 1091px;
         height: 43px;
+        max-width: none;
     }
+
     .inputLocationArea {
-        width:1091px;
+        width: 1091px;
+        max-width: none;
     }
+
     .btnDownload {
-        width:215px;
+        width: 215px;
     }
-    .imageLocation{
+
+    .imageLocation {
         width: 1091px;
         height: 726px;
+        max-width: none;
     }
 }
